--- a/style5.css
+++ b/style5.css
@@ -1,7 +1,7 @@
 .container {
 	display: grid;
-	grid-template-columns: 20% 20% 20% 20% 20%;
-	grid-template-rows: repeat(4,100px);
+	grid-template-columns: repeat(5, 20%);
+	grid-template-rows: repeat(4, 100px);
 	grid-row-gap: 10px;
 	grid-column-gap:10px;
 
@@ -72,4 +72,7 @@
 .m {
 	grid-column:5/6;
 	grid-row:4/5;
+}
+div {
+	border-radius: 10px;
 }
